plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'jacoco'
}

group 'hexlet.code'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven {
        url 'https://repo.clojars.org'
        name 'Clojars'
    }
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'info.picocli:picocli:4.7.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    //testImplementation 'org.junit:junit-bom:5.9.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'hexlet.code.App'
}

compileJava {
    options.release = 17
}

checkstyle {
    toolVersion '9.2.1'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}
